crates/tui/tests/snapshots/views__account-picker-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › accounts   account Acme (1)   list Weekly
1         Acme
2         unnamed




































q quit  Enter choose  Esc back  Ctrl-p palette
