crates/tui/tests/snapshots/views__builder-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › broadcasts list   account Acme (1)   list Weekly
list-id                     7


















sends GET /1.0/accounts/1/lists/7/broadcasts


q quit  Enter send  Tab next row  Esc back  Ctrl-p palette
