crates/tui/tests/snapshots/views__builder-candidates-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers move   account Acme (1)   list Weekly
list-id                     7
subscriber-id               ┌ choose one ──────────────────────────────────────────────────┐
list-link                   │>                                                             │
                            │Weekly                                                        │
                            │Monthly                                                       │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
incomplete subscriber-id is └──────────────────────────────────────────────────────────────┘


q quit  Enter send  Tab next row  Esc back  Ctrl-p palette
