crates/tui/tests/snapshots/views__builder-candidates-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers move   account Acme (1)   list Weekly
list-id                     7
subscrib┌ choose one ──────────────────────────────────────────────────┐
list-lin│>                                                             │
        │Weekly                                                        │
        │Monthly                                                       │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
incomple└──────────────────────────────────────────────────────────────┘


q quit  Enter send  Tab next row  Esc back  Ctrl-p palette
