crates/tui/tests/snapshots/views__builder-picker-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › broadcasts list   account Acme (1)   list Weekly
list-id                     7
                            ┌ add an argument ─────────────────────────────────────────────┐
                            │>                                                             │
                            │list                                                          │
                            │status                                                        │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
sends GET /1.0/accounts/1/li└──────────────────────────────────────────────────────────────┘


q quit  Enter send  Tab next row  Esc back  Ctrl-p palette
