crates/tui/tests/snapshots/views__collection-empty-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                                   Status                                  Subscribed
no entries


































loaded 0  end of the collection

q quit  Enter open  / filter loaded  Esc back  Ctrl-p palette
